[FIX] Notications box showing on mobile

--- a/app/assets/stylesheets/briarcliff/_dropdown.scss
+++ b/app/assets/stylesheets/briarcliff/_dropdown.scss
@@ -94,6 +94,10 @@
   }
 }
 
+.dropdown-content--helper {
+  visibility: hidden;
+}
+
 .dropdown--left {
   right: 0;
   left: auto;
